--- a/Facturacion.csproj
+++ b/Facturacion.csproj
@@ -72,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="widgets\RjControls.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="forms\Form_factura.resx">
       <DependentUpon>Form_factura.cs</DependentUpon>
     </EmbeddedResource>
