--- a/Facturacion.csproj
+++ b/Facturacion.csproj
@@ -67,11 +67,11 @@
     <Compile Include="forms\Form_cotiza.Designer.cs">
       <DependentUpon>Form_cotiza.cs</DependentUpon>
     </Compile>
-    <Compile Include="forms\Form_orden_compra.cs">
+    <Compile Include="forms\Form_orden.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="forms\Form_orden_compra.Designer.cs">
-      <DependentUpon>Form_orden_compra.cs</DependentUpon>
+    <Compile Include="forms\Form_orden.Designer.cs">
+      <DependentUpon>Form_orden.cs</DependentUpon>
     </Compile>
     <Compile Include="forms\Main.cs">
       <SubType>Form</SubType>
@@ -95,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Form_factura.resx">
       <DependentUpon>Form_factura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Form_orden.resx">
+      <DependentUpon>Form_orden.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -146,6 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\colorrojo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\orden.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
